--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
           <div id="div_block-3-18" class="ct-div-block">
             <div id="div_block-7-18" class="ct-div-block"></div>
           </div>
-          <a id="div_block-42-18" class="ct-link blue-glow" href="/login.html"
+          <a id="div_block-42-18" class="ct-link blue-glow" href="./login.html"
             ><div id="text_block-43-18" class="ct-text-block blue-text-glow">
               START
             </div></a
